Kiwix 0.9 beta2
* Regression fix, tabs should not be visible per default
* Fixed deprecated tmp.kiwix.org/zim links in help files (ID: 3376641)
* Now able to load on GNU/Linux with the command line ZIM files with " " in their path
* Add menuitem File > Browse Library (ID: 3377139)
* Avoid segfault by bookmarks pointing to a missing ZIM file (ID: 3376642)
* Fixed the searchindex assignement problem if the current ZIM file is changed during indexing process (ID: 3377136)
* Fixed broken locales it and ar
* Fixed OSX crashes if previous ZIM was gone (ID: 3243147)
* Fixed regression with not always 100% visible close tab button (ID: 3377280)
* Fixed issue occuring by installing PPA 0.9 beta1 over alpha7 fails (ID: 3377130)
* Fixed drag zim file on Kiwix icon in OSX Dock (ID: 3315167)
* Fixed drag zim on Kiwix window in OSX (ID: 3385313)
* Fixed fullscreen shortcut for OSX now compliant to standard (ID: 3304022)
* Avoid the possibility to open an external url in a new kiwix tab (does not make sense)
* Implement ctrl+w keyboard shortcut to close the current tab
* Implement ctrl+W keyboard shortcut to close all tabs
* Close all tabs before opening new ZIM file, avoid weird situations (ID: 3372140)
* Fixed tabs behavior + fullScreen

Kiwix 0.9 beta1
* Remove a hard coded path in kiwix-compact.sh (ID: 3135956)
* Avoid the flickering during mouseover links after canceling the indexing
* Under Windows, installer adds now shortcuts to all users
* Force loading no plugin to avoid any problem (with libmoon for example)
* Under Windows, the displayed (disk) "space required" value is now correct in the installer
* kiwix-index backend argument is now an option and set as "xapian" per default
* Fix regressions responsible for lower case titles in result list (ID: 3147594)
* Implement the HTTP 404 error in kiwix-serve
* Fix a small bug in the indexing code to avoid forgetting around 100 articles per ZIM file
* Disable DNS prefetching for external links
* New locales: Polish, Dutch